# Zwitterion

./: .gitignore  Cargo.toml  LICENSE.md  README.md  Zwitterion.sln
ConsoleHarness/: ConsoleHarness.csproj  Program.cs
ConsoleHarness/Properties/: AssemblyInfo.cs
RustflameFFI-CS/: RustCalls.cs  RustflameFFI-CS.csproj
RustflameFFI-CS/Properties/: AssemblyInfo.cs
Zwitterion/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Zwitterion.csproj
Zwitterion/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
rustflame/: Cargo.toml  Flames.flame  OneFlame.flame
rustflame-ffi/: Cargo.toml
rustflame-ffi/src/: lib.rs
rustflame/src/: color.rs  flame_2d.rs  lib.rs  main.rs  tests.rs
zwitterion-druid/: Cargo.toml
zwitterion-druid/src/: main.rs
