[package]
name = "zwitterion-druid"
version = "0.1.0"
authors = ["Zarenor <zarenor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {git = "https://github.com/Zarenor/druid.git", branch = "render-tree"}
rustflame = {path = "../rustflame"}